[gd_scene load_steps=2 format=3 uid="uid://b73as78ofg6vx"]

[ext_resource type="Script" path="res://src/ui/effect_list.gd" id="1_otesi"]

[node name="EffectList" type="Control"]
layout_mode = 3
anchors_preset = 0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_otesi")

[node name="EffectContainer" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 1.0
offset_bottom = 1.0
grow_horizontal = 2

[node name="DropHint" type="Panel" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
theme_type_variation = &"LayerDropHint"
